# remote-logon-service

./: .build.yml  AUTHORS  AUTHORS.Canonical  ChangeLog  ChangeLog.until-1.0.0  Makefile.am  Makefile.am.coverage  Makefile.in  NEWS  README  README.md  aclocal.m4  config.h.in  configure  configure.ac
.tx/: config
data/: Makefile.am  Makefile.in  com.canonical.RemoteLogin.service.in  org.ArcticaProject.RemoteLogon.service.in  remote-login-service.conf.in  remote-logon-service.conf.in
debian/: changelog  control  copyright  rules  watch
debian/patches/: 02_server-name.patch  03_x2go+rls.patch  series
m4/: gcov.m4
po/: POTFILES.in  af.po  am.po  an.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  cv.po  cy.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  frp.po  (+79 more)
src/: Makefile.am  Makefile.in  citrix-server.c  citrix-server.h  com.canonical.RemoteLogin.xml  crypt.c  crypt.h  defines.h  main.c  org.ArcticaProject.RemoteLogon.xml  rdp-server.c  rdp-server.h  remote-login.c  remote-login.h  server.c  server.h  uccs-server.c  uccs-server.h  x2go-server.c  x2go-server.h
tests/: Makefile.am  Makefile.in  dbus-interface.c  null-config.conf  server-test.c  slmock  slmock-config.conf.in  uccs-config.conf
